--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
   <section id="galerie">
     <h2>Galerie de peintures</h2>
     <div class="gallery">
-      <img src="https://ismaelbenothman.github.io/FB_IMG_1716387860433.jpg" alt="Œuvre 1">
-      <img src="https://ismaelbenothman.github.io/IMG_20210518_123826.jpg" alt="Œuvre 2">
-      <img src="https://ismaelbenothman.github.io/IMG_20210827_001306.jpg" alt="Œuvre 3">
-      <img src="https://ismaelbenothman.github.io/IMG_20211228_123438.jpg" alt="Œuvre 4">
-      <img src="https://ismaelbenothman.github.io/IMG_20211230_160828.jpg" alt="Œuvre 5">
+<img src="Oeuvre1.jpg" alt="Oeuvre 1">
+<img src="Oeuvre2.jpg" alt="Oeuvre 2">
+<img src="Oeuvre3.jpg" alt="Oeuvre 3">
+<img src="Oeuvre4.jpg" alt="Oeuvre 4">
+<img src="Oeuvre5.jpg" alt="Oeuvre 5">
     </div>
   </section>
 
