--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
   <section id="galerie">
     <h2>Galerie de peintures</h2>
     <div class="gallery">
-<img src="Oeuvre1.jpg" alt="Oeuvre 1">
-<img src="Oeuvre2.jpg" alt="Oeuvre 2">
-<img src="Oeuvre3.jpg" alt="Oeuvre 3">
-<img src="Oeuvre4.jpg" alt="Oeuvre 4">
-<img src="Oeuvre5.jpg" alt="Oeuvre 5">
+<img src="Oeuvre1.jpg" alt="oeuvre 1">
+<img src="Oeuvre2.jpg" alt="oeuvre 2">
+<img src="Oeuvre3.jpg" alt="oeuvre 3">
+<img src="Oeuvre4.jpg" alt="oeuvre 4">
+<img src="Oeuvre5.jpg" alt="oeuvre 5">
     </div>
   </section>
 
