--- a/index.html
+++ b/index.html
@@ -3,18 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ismael Ben Othman - Artiste Peintre</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Ismael Ben Othman</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+            background: #fff;
+            color: #000;
+        }
+        h1 {
+            color: #000080;
+        }
+        nav a {
+            margin-right: 15px;
+            color: #000080;
+            text-decoration: none;
+        }
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 10px;
+            margin-top: 20px;
+        }
+        .gallery img {
+            width: 100%;
+            height: auto;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+        }
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 24px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Ismael Ben Othman</h1>
-        <nav>
-            <a href="#about">À propos</a>
-            <a href="#gallery">Galerie</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
+    <h1>Ismael Ben Othman</h1>
+    <nav>
+        <a href="#about">À propos</a>
+        <a href="#gallery">Galerie</a>
+        <a href="#contact">Contact</a>
+    </nav>
 
     <section id="about">
         <h2>À propos de moi</h2>
