--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
     <section id="gallery">
         <h2>Galerie</h2>
         <div class="gallery">
-            <img src="./oeuvre1.jpg" alt="Oeuvre 1">
-            <img src="./oeuvre2.jpg" alt="Oeuvre 2">
-            <img src="./oeuvre3.jpg" alt="Oeuvre 3">
-            <img src="./oeuvre4.jpg" alt="Oeuvre 4">
-            <img src="./oeuvre5.jpg" alt="Oeuvre 5">
-            <img src="./oeuvre6.jpg" alt="Oeuvre 6">
-            <img src="./oeuvre7.jpg" alt="Oeuvre 7">
-            <img src="./oeuvre8.jpg" alt="Oeuvre 8">
-            <img src="./oeuvre9.jpg" alt="Oeuvre 9">
-            <img src="./oeuvre10.jpg" alt="Oeuvre 10">
-            <img src="./oeuvre11.jpg" alt="Oeuvre 11">
-            <img src="./oeuvre12.jpg" alt="Oeuvre 12">
-            <img src="./oeuvre13.jpg" alt="Oeuvre 13">
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre1.jpg" alt="Oeuvre 1"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre2.jpg" alt="Oeuvre 2"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre3.jpg" alt="Oeuvre 3"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre4.jpg" alt="Oeuvre 4"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre5.jpg" alt="Oeuvre 5"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre6.jpg" alt="Oeuvre 6"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre7.jpg" alt="Oeuvre 7"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre8.jpg" alt="Oeuvre 8"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre9.jpg" alt="Oeuvre 9"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre10.jpg" alt="Oeuvre 10"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre11.jpg" alt="Oeuvre 11"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre12.jpg" alt="Oeuvre 12"></a>
+           <a href="./oeuvre1.jpg" target="_blank"> <img src="./oeuvre13.jpg" alt="Oeuvre 13"></a>
         </div>
     </section>
 
