--- a/index.html
+++ b/index.html
@@ -5,33 +5,38 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ismael Ben Othman - Artiste Peintre</title>
-  <link rel="stylesheet" href="style.css" />
-  <script>
-    function switchLanguage() {
-      window.location.href = "en.html";
-    }
-  </script>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body>
   <header>
-    <img src="ismael.jpg" alt="Ismael Ben Othman" class="hero-image" />
+    <img src="ismael-profil.jpg" alt="Ismael Ben Othman" class="profile-photo" />
     <h1>Ismael Ben Othman</h1>
     <p>Artiste Peintre Tunisien</p>
     <button onclick="switchLanguage()">English</button>
     <div class="social-icons">
-      <a href="https://www.facebook.com/ismail.benothman" target="_blank">🌐 Facebook</a>
-      <a href="https://www.instagram.com" target="_blank">📸 Instagram</a>
+      <a href="https://www.facebook.com/ismail.benothman" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+      <a href="#" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
     </div>
   </header>
 
-  <section class="gallery">
-    <h2>Galerie</h2>
-    <div class="grid">
-      <!-- Les images seront affichées automatiquement via HTML, exemple ci-dessous -->
-      <img src="img1.jpg" alt="Œuvre 1" />
-      <img src="img2.jpg" alt="Œuvre 2" />
-      <img src="img3.jpg" alt="Œuvre 3" />
-    </div>
-  </section>
+  <main>
+    <section id="gallery">
+      <h2>Galerie</h2>
+      <div class="gallery-grid">
+        <div class="art-frame"><img src="oeuvre1.jpg" alt="Œuvre 1" /></div>
+        <div class="art-frame"><img src="oeuvre2.jpg" alt="Œuvre 2" /></div>
+        <div class="art-frame"><img src="oeuvre3.jpg" alt="Œuvre 3" /></div>
+      </div>
+    </section>
+  </main>
+
+  <script>
+    function switchLanguage() {
+      document.querySelector("h1").textContent = "Ismael Ben Othman";
+      document.querySelector("p").textContent = "Tunisian Painter";
+      document.querySelector("h2").textContent = "Gallery";
+    }
+  </script>
 </body>
 </html>
