--- a/en.html
+++ b/en.html
@@ -2,35 +2,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ismael Ben Othman - Painter</title>
-  <link rel="stylesheet" href="style.css" />
-  <script>
-    function switchLanguage() {
-      window.location.href = "index.html";
-    }
-  </script>
+    <meta charset="UTF-8">
+    <title>Ismael Ben Othman - Artiste Peintre</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="ismael.jpg">
+    <script>
+        function switchToFrançais() {
+            window.location.href = 'index.html';
+        }
+    </script>
 </head>
 <body>
-  <header>
-    <img src="ismael.jpg" alt="Ismael Ben Othman" class="hero-image" />
-    <h1>Ismael Ben Othman</h1>
-    <p>Tunisian Painter</p>
-    <button onclick="switchLanguage()">Français</button>
-    <div class="social-icons">
-      <a href="https://www.facebook.com/ismail.benothman" target="_blank">🌐 Facebook</a>
-      <a href="https://www.instagram.com" target="_blank">📸 Instagram</a>
-    </div>
-  </header>
-
-  <section class="gallery">
-    <h2>Gallery</h2>
-    <div class="grid">
-      <img src="img1.jpg" alt="Artwork 1" />
-      <img src="img2.jpg" alt="Artwork 2" />
-      <img src="img3.jpg" alt="Artwork 3" />
-    </div>
-  </section>
+    <header>
+        <img src="ismael.jpg" alt="Ismael Ben Othman" class="profile-img">
+        <h1>Ismael Ben Othman</h1>
+        <p>Tunisian Painter</p>
+        <button onclick="switchToFrançais()">Français</button>
+        <div class="socials">
+            <a href="https://www.facebook.com/ismail.benothman" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+        </div>
+    </header>
+    <main>
+        <h2>Gallery</h2>
+        <div class="gallery">
+<div class="ename"><img src="oeuvre1.jpg" alt="Artwork 1"><p>Artwork 1</p></div>
+<div class="ename"><img src="oeuvre2.jpg" alt="Artwork 2"><p>Artwork 2</p></div>
+<div class="ename"><img src="oeuvre3.jpg" alt="Artwork 3"><p>Artwork 3</p></div>
+<div class="ename"><img src="oeuvre4.jpg" alt="Artwork 4"><p>Artwork 4</p></div>
+<div class="ename"><img src="oeuvre5.jpg" alt="Artwork 5"><p>Artwork 5</p></div>
+<div class="ename"><img src="oeuvre6.jpg" alt="Artwork 6"><p>Artwork 6</p></div>
+<div class="ename"><img src="oeuvre7.jpg" alt="Artwork 7"><p>Artwork 7</p></div>
+<div class="ename"><img src="oeuvre8.jpg" alt="Artwork 8"><p>Artwork 8</p></div>
+<div class="ename"><img src="oeuvre9.jpg" alt="Artwork 9"><p>Artwork 9</p></div>
+<div class="ename"><img src="oeuvre10.jpg" alt="Artwork 10"><p>Artwork 10</p></div>
+<div class="ename"><img src="oeuvre11.jpg" alt="Artwork 11"><p>Artwork 11</p></div>
+<div class="ename"><img src="oeuvre12.jpg" alt="Artwork 12"><p>Artwork 12</p></div>
+<div class="ename"><img src="oeuvre13.jpg" alt="Artwork 13"><p>Artwork 13</p></div>
+        </div>
+    </main>
 </body>
 </html>
