--- a/index.html
+++ b/index.html
@@ -2,37 +2,44 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ismael Ben Othman - Artiste Peintre</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <title>Ismael Ben Othman - Artiste Peintre</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="ismael.jpg">
+    <script>
+        function switchToEnglish() {
+            window.location.href = 'en.html';
+        }
+    </script>
 </head>
 <body>
-  <header>
-    <h1>Ismael Ben Othman</h1>
-    <p>Artiste Peintre Tunisien</p>
-    <div class="social-icons">
-      <a href="https://www.facebook.com/ismail.benothman" target="_blank"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-    </div>
-  </header>
-  <section class="hero">
-    <img src="ismael.jpg" alt="Ismael Ben Othman en train de peindre" />
-  </section>
-  <section class="gallery">
-    <h2>Galerie</h2>
-    <div class="grid">
-      <!-- Ajoutez vos images ici -->
-      <img src="images/oeuvre1.jpg" alt="Oeuvre 1" />
-      <img src="images/oeuvre2.jpg" alt="Oeuvre 2" />
-      <img src="images/oeuvre3.jpg" alt="Oeuvre 3" />
-      <img src="images/oeuvre4.jpg" alt="Oeuvre 4" />
-      <img src="images/oeuvre5.jpg" alt="Oeuvre 5" />
-    </div>
-  </section>
-  <footer>
-    <p>&copy; 2025 Ismael Ben Othman. Tous droits réservés.</p>
-  </footer>
+    <header>
+        <img src="ismael.jpg" alt="Ismael Ben Othman" class="profile-img">
+        <h1>Ismael Ben Othman</h1>
+        <p>Artiste Peintre Tunisien</p>
+        <button onclick="switchToEnglish()">English</button>
+        <div class="socials">
+            <a href="https://www.facebook.com/ismail.benothman" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+        </div>
+    </header>
+    <main>
+        <h2>Galerie</h2>
+        <div class="gallery">
+<div class="frame"><img src="oeuvre1.jpg" alt="Œuvre 1"><p>Œuvre 1</p></div>
+<div class="frame"><img src="oeuvre2.jpg" alt="Œuvre 2"><p>Œuvre 2</p></div>
+<div class="frame"><img src="oeuvre3.jpg" alt="Œuvre 3"><p>Œuvre 3</p></div>
+<div class="frame"><img src="oeuvre4.jpg" alt="Œuvre 4"><p>Œuvre 4</p></div>
+<div class="frame"><img src="oeuvre5.jpg" alt="Œuvre 5"><p>Œuvre 5</p></div>
+<div class="frame"><img src="oeuvre6.jpg" alt="Œuvre 6"><p>Œuvre 6</p></div>
+<div class="frame"><img src="oeuvre7.jpg" alt="Œuvre 7"><p>Œuvre 7</p></div>
+<div class="frame"><img src="oeuvre8.jpg" alt="Œuvre 8"><p>Œuvre 8</p></div>
+<div class="frame"><img src="oeuvre9.jpg" alt="Œuvre 9"><p>Œuvre 9</p></div>
+<div class="frame"><img src="oeuvre10.jpg" alt="Œuvre 10"><p>Œuvre 10</p></div>
+<div class="frame"><img src="oeuvre11.jpg" alt="Œuvre 11"><p>Œuvre 11</p></div>
+<div class="frame"><img src="oeuvre12.jpg" alt="Œuvre 12"><p>Œuvre 12</p></div>
+<div class="frame"><img src="oeuvre13.jpg" alt="Œuvre 13"><p>Œuvre 13</p></div>
+        </div>
+    </main>
 </body>
 </html>
