--- a/en.html
+++ b/en.html
@@ -2,40 +2,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ismael Ben Othman - Artiste Peintre</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ismael Ben Othman - Artist</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="ismael.jpg" alt="Ismael Ben Othman" class="profile-pic"/>
-    <h1>Ismael Ben Othman</h1>
-    <p>Tunisian Painter Artist</p>
-    <button onclick="window.location.href='index.html'">Français</button>
-    <div class="social-icons">
-      <a href="https://www.facebook.com/ismail.benothman" target="_blank"><i class="fab fa-facebook fa-lg"></i> Facebook</a>
-      <a href="#" target="_blank"><i class="fab fa-instagram fa-lg"></i> Instagram</a>
-    </div>
-  </header>
-  <main>
-    <h2>Gallery</h2>
-    <div class="gallery">
-      <figure><img src="oeuvre1.jpg" alt="Œuvre 1"><figcaption>Œuvre 1</figcaption></figure>
-<figure><img src="oeuvre2.jpg" alt="Œuvre 2"><figcaption>Œuvre 2</figcaption></figure>
-<figure><img src="oeuvre3.jpg" alt="Œuvre 3"><figcaption>Œuvre 3</figcaption></figure>
-<figure><img src="oeuvre4.jpg" alt="Œuvre 4"><figcaption>Œuvre 4</figcaption></figure>
-<figure><img src="oeuvre5.jpg" alt="Œuvre 5"><figcaption>Œuvre 5</figcaption></figure>
-<figure><img src="oeuvre6.jpg" alt="Œuvre 6"><figcaption>Œuvre 6</figcaption></figure>
-<figure><img src="oeuvre7.jpg" alt="Œuvre 7"><figcaption>Œuvre 7</figcaption></figure>
-<figure><img src="oeuvre8.jpg" alt="Œuvre 8"><figcaption>Œuvre 8</figcaption></figure>
-<figure><img src="oeuvre9.jpg" alt="Œuvre 9"><figcaption>Œuvre 9</figcaption></figure>
-<figure><img src="oeuvre10.jpg" alt="Œuvre 10"><figcaption>Œuvre 10</figcaption></figure>
-<figure><img src="oeuvre11.jpg" alt="Œuvre 11"><figcaption>Œuvre 11</figcaption></figure>
-<figure><img src="oeuvre12.jpg" alt="Œuvre 12"><figcaption>Œuvre 12</figcaption></figure>
-<figure><img src="oeuvre13.jpg" alt="Œuvre 13"><figcaption>Œuvre 13</figcaption></figure>
-    </div>
-  </main>
+    <header>
+        <img src="ismael.jpg" alt="Ismael Ben Othman">
+        <h1>Ismael Ben Othman</h1>
+        <p>Tunisian Painter Artist</p>
+        <div class="lang-switch">
+            <a href="index.html">Français</a>
+        </div>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/ismail.benothman" target="_blank">🌐 Facebook</a>
+            <a href="#" target="_blank">📸 Instagram</a>
+        </div>
+    </header>
+    <section class="gallery">
+        <div class="gallery-item"><a href="oeuvre1.jpg" target="_blank"><img src="oeuvre1.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre2.jpg" target="_blank"><img src="oeuvre2.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre3.jpg" target="_blank"><img src="oeuvre3.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre4.jpg" target="_blank"><img src="oeuvre4.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre5.jpg" target="_blank"><img src="oeuvre5.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre6.jpg" target="_blank"><img src="oeuvre6.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre7.jpg" target="_blank"><img src="oeuvre7.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre8.jpg" target="_blank"><img src="oeuvre8.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre9.jpg" target="_blank"><img src="oeuvre9.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre10.jpg" target="_blank"><img src="oeuvre10.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre11.jpg" target="_blank"><img src="oeuvre11.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre12.jpg" target="_blank"><img src="oeuvre12.jpg" alt="Œuvre"></a></div>
+<div class="gallery-item"><a href="oeuvre13.jpg" target="_blank"><img src="oeuvre13.jpg" alt="Œuvre"></a></div>
+    </section>
 </body>
 </html>
