--- a/index.html
+++ b/index.html
@@ -4,36 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ismael Ben Othman - Artiste</title>
+    <title>Ismael Ben Othman - Artiste Peintre</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
-        <img src="ismael.jpg" alt="Ismael Ben Othman">
+        <img src="profile.jpg" alt="Ismael Ben Othman" class="profile-pic">
         <h1>Ismael Ben Othman</h1>
         <p>Artiste Peintre Tunisien</p>
         <div class="lang-switch">
-            <a href="en.html">English</a>
+            <button onclick="setLanguage('fr')">FR</button>
+            <button onclick="setLanguage('en')">EN</button>
         </div>
         <div class="social-icons">
-            <a href="https://www.facebook.com/ismail.benothman" target="_blank">🌐 Facebook</a>
-            <a href="#" target="_blank">📸 Instagram</a>
+            <a href="https://www.facebook.com/ismail.benothman" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="#" id="instaLink" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </header>
-    <section class="gallery">
-        <div class="gallery-item"><a href="oeuvre1.jpg" target="_blank"><img src="oeuvre1.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre2.jpg" target="_blank"><img src="oeuvre2.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre3.jpg" target="_blank"><img src="oeuvre3.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre4.jpg" target="_blank"><img src="oeuvre4.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre5.jpg" target="_blank"><img src="oeuvre5.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre6.jpg" target="_blank"><img src="oeuvre6.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre7.jpg" target="_blank"><img src="oeuvre7.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre8.jpg" target="_blank"><img src="oeuvre8.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre9.jpg" target="_blank"><img src="oeuvre9.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre10.jpg" target="_blank"><img src="oeuvre10.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre11.jpg" target="_blank"><img src="oeuvre11.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre12.jpg" target="_blank"><img src="oeuvre12.jpg" alt="Œuvre"></a></div>
-<div class="gallery-item"><a href="oeuvre13.jpg" target="_blank"><img src="oeuvre13.jpg" alt="Œuvre"></a></div>
+
+    <section class="gallery" id="gallery">
+        <!-- Images cliquables sans légendes -->
+        <a href="images/1.jpg" target="_blank"><img src="images/1.jpg" alt="Œuvre 1" class="art-frame"></a>
+        <a href="images/2.jpg" target="_blank"><img src="images/2.jpg" alt="Œuvre 2" class="art-frame"></a>
+        <a href="images/3.jpg" target="_blank"><img src="images/3.jpg" alt="Œuvre 3" class="art-frame"></a>
+        <a href="images/4.jpg" target="_blank"><img src="images/4.jpg" alt="Œuvre 4" class="art-frame"></a>
+        <a href="images/5.jpg" target="_blank"><img src="images/5.jpg" alt="Œuvre 5" class="art-frame"></a>
+        <a href="images/6.jpg" target="_blank"><img src="images/6.jpg" alt="Œuvre 6" class="art-frame"></a>
+        <a href="images/7.jpg" target="_blank"><img src="images/7.jpg" alt="Œuvre 7" class="art-frame"></a>
+        <a href="images/8.jpg" target="_blank"><img src="images/8.jpg" alt="Œuvre 8" class="art-frame"></a>
+        <a href="images/9.jpg" target="_blank"><img src="images/9.jpg" alt="Œuvre 9" class="art-frame"></a>
+        <a href="images/10.jpg" target="_blank"><img src="images/10.jpg" alt="Œuvre 10" class="art-frame"></a>
     </section>
+
+    <script>
+        function setLanguage(lang) {
+            document.documentElement.lang = lang;
+        }
+    </script>
 </body>
 </html>
