--- a/index.html
+++ b/index.html
@@ -21,23 +21,37 @@
   </header>
 
   <main>
-    <section class="gallery-section">
-      <h2 class="gallery-title" data-fr="Galerie" data-en="Gallery">Galerie</h2>
-      <div class="gallery">
-        <a href="oeuvre1.jpg" target="_blank"><img src="oeuvre1.jpg" alt="Tableau 1"></a>
-        <a href="oeuvre2.jpg" target="_blank"><img src="oeuvre2.jpg" alt="Tableau 2"></a>
-        <a href="oeuvre3.jpg" target="_blank"><img src="oeuvre3.jpg" alt="Tableau 3"></a>
-        <a href="oeuvre4.jpg" target="_blank"><img src="oeuvre4.jpg" alt="Tableau 4"></a>
-        <a href="oeuvre5.jpg" target="_blank"><img src="oeuvre5.jpg" alt="Tableau 5"></a>
-        <a href="oeuvre6.jpg" target="_blank"><img src="oeuvre6.jpg" alt="Tableau 6"></a>
-        <a href="oeuvre7.jpg" target="_blank"><img src="oeuvre7.jpg" alt="Tableau 7"></a>
-        <a href="oeuvre8.jpg" target="_blank"><img src="oeuvre8.jpg" alt="Tableau 8"></a>
-        <a href="oeuvre10.jpg" target="_blank"><img src="oeuvre10.jpg" alt="Tableau 9"></a>
-        <a href="oeuvre11.jpg" target="_blank"><img src="oeuvre11.jpg" alt="Tableau 10"></a>
-        <a href="oeuvre12.jpg" target="_blank"><img src="oeuvre12.jpg" alt="Tableau 11"></a>
-        <a href="oeuvre13.jpg" target="_blank"><img src="oeuvre13.jpg" alt="Tableau 12"></a>
-      </div>
-    </section>
+    <section class="gallery-section" style="background-color: #FFD700;"> <!-- Jaune cadmium -->
+  <h2>Galerie</h2>
+  <div class="gallery">
+    <a href="oeuvre1.jpg" class="lightbox">
+      <img src="oeuvre1.jpg" alt="">
+    </a>
+    <a href="oeuvre2.jpg" class="lightbox">
+      <img src="oeuvre2.jpg" alt="">
+    </a>
+    <a href="oeuvre3.jpg" class="lightbox">
+      <img src="oeuvre3.jpg" alt="">
+    </a>
+    <a href="oeuvre4.jpg" class="lightbox">
+      <img src="oeuvre4.jpg" alt="">
+    </a>
+    <<a href="oeuvre5.jpg" class="lightbox">
+  <img src="oeuvre5.jpg" alt="">
+</a>
+<a href="oeuvre6.jpg" class="lightbox">
+  <img src="oeuvre6.jpg" alt="">
+</a>
+<a href="oeuvre7.jpg" class="lightbox">
+  <img src="oeuvre7.jpg" alt="">
+</a>
+...
+<a href="oeuvre13.jpg" class="lightbox">
+  <img src="oeuvre13.jpg" alt="">
+</a>!-- continue avec les autres œuvres -->
+  </div>
+</section>
+  </section>
   </main>
 
   <script>
